# stilio

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  README.rst  dev.yml  docker-compose.yml  env-example  mypy.ini  pyproject.toml
compose/crawler/: Dockerfile  entrypoint  start
compose/frontend/local/: Dockerfile
compose/frontend/production/: Dockerfile
compose/persistence/: Dockerfile
docker/crawler/: Dockerfile  entrypoint  entrypoint.sh
docker/frontend/local/: Dockerfile
docker/frontend/production/: Dockerfile  entrypoint
docker/persistence/: Dockerfile
docs/source/: conf.py  index.rst
docs/source/stilio/: database.rst  development.rst  guides.rst  installation.rst
stilio/: config.py
stilio/crawler/: main.py
stilio/crawler/bittorrent/: bencoding.py  constants.py  exceptions.py  metadata.py  utils.py
stilio/crawler/dht/: constants.py  crawling.py  dispatcher.py  network.py  node.py  routing.py  rpc.py  udp.py  utils.py
stilio/frontend/: main.py  pagination.py  settings.py
stilio/frontend/static/css/: styles.css
stilio/frontend/templates/: base.html  index.html  search.html
stilio/frontend/templates/components/: search_box.html
stilio/persistence/: constants.py  database.py  exceptions.py  populate.py  torrents.py  utils.py
stilio/persistence/torrents/: models.py
tests/: test_dht.py  test_utils.py
