[tool.poetry]
name = "stilio"
version = "0.1.0"
description = "A DHT crawler with a minimalistic frontend"
authors = ["Iván José Martín García <ivanmartinga@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
better-bencode = "^0.2.1"
gunicorn = "^20.0.4"
fastapi = "^0.52.0"
uvicorn = "^0.11.3"
jinja2 = "^2.11.1"
aiofiles = "^0.4.0"
peewee = "^3.13.1"
peewee-async = "^0.7.0"
aiopg = "^1.0.0"
psycopg2-binary = "^2.8.4"
Faker = "^4.0.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
coverage = "^5.0.3"
pytest = "^5.4.1"
sphinx = "^2.4.4"
sphinx-rtd-theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
