[tool.poetry]
name = "stilio"
version = "0.1.0"
description = "A DHT crawler with a minimalistic frontend"
authors = ["Iván José Martín García <ivanmartinga@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
better-bencode = "^0.2.1"
gunicorn = "^20.0.4"
fastapi = "^0.52.0"
uvicorn = "^0.11.7"
jinja2 = "^2.11.1"
aiofiles = "^0.4.0"
peewee = "^3.13.1"
peewee-async = "^0.7.0"
aiopg = "^1.0.0"
psycopg2-binary = "^2.8.4"
Faker = "^4.0.2"
ipython = "^7.20.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
coverage = "^5.0.3"
pytest = "^5.4.1"
isort = "^5.7.0"
peewee-migrate = "^1.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''
